Changes for 1.8.11rc1

A.F....... [ZBX-4604] fixed "screen" type screen item validation (pavels)
..F....... [ZBX-4680] fixed minor typo in frontends/php/js/class.rpc.js (Alexei)
...G...... [ZBX-1298] fixed processing of command line arguments more than 2KB in proc.num and proc.mem checks on Linux (Sasha)
........S. [ZBX-4650] fixed possible server crash while processing trigger expressions (Sasha)
.......PS. [ZBX-3688] fixed changing host's availabitily for dynamic SNMP checks (Sasha)
........S. [ZBX-4671] fixed processing of calculated items with expressions more than 2KB (Sasha)
...G...PS. [ZBX-3788] signal handlers changed to reduce probability of process hang on exit (Andris)
A.F....... [ZBX-4593] fixed "trigger info" type screen item resource validation (pavels)
.......PS. [ZBX-1555] fixed discovery error message if IPv6 support is not compiled in (Sasha)
.......PS. [ZBX-3992] removed web monitoring items from synchronization of the proxy (Sasha)
.......PS. [ZBX-860] more useful SNMP error messages (Sasha)
..F....... [ZBX-1787] fixed gradient element rendering if the value exceeds the max Y scale value (pavels)
........S. [ZBX-4612] Unix style exit codes when converting database to DM (Sasha)
A.F....... [ZBX-2679] fixed validation of masks in IP ranges in discovery (Sasha)
A.F....... [ZBX-4333] fixed linking templates with cross template trigger dependencies (pavels)
A.F....... [ZBX-4333] fixed empty error messages when performing certain actions (pavels)
....I..... [ZBX-3262] fixed warning "no AC_LANG_SOURCE call detected in body" raised during compilation (Alexei)
..F....... [ZBX-4586] fixed items being bound to the wrong applications when cloning to a different host (pavels)
...GI..PS. [ZBX-4535] fixed build with --as-needed linker flag (Sasha)
..F....... [ZBX-3955] added pop up field name parameter validation (pavels)
...G...PS. [ZBX-4564] daemon processes will use default priority, no prioritization on startup (Alexei)